--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+.vscode
+*.pt
+*.pth
+*.zip
+MSLesSeg-Dataset/
+runs/
+datasets/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
