--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
     "dataset": {
         "input_path": "datasets/MSLesSeg-Dataset",
-        "output_path": "datasets/"
+        "output_path": "datasets/unet"
+    },
+    "preprocessing": {
+        "resize": "640x640",
+        "split": 0.8
     },
     "hyperparameters": {
-        "img_size": "640x640",
-        "split": 0.8,
         "batch_size": 32,
         "epochs": 10,
         "learning_rate": 0.001
