Improved yolo class

--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,34 @@
-step = "predict"
+step = "train"
 
 [preprocess]
-net = "unet"
+net = "yolo"
 src_path = "datasets/MSLesSeg-Dataset"
-dst_path = "datasets/unet_single_x2"
-resize = "256x256"
+dst_path = "datasets/yolo_single_x2"
+resize = "320x320"
 super_scale = 2
 # resize_method = "bilinear"
 split = 0.8
 
 [train]
-net = "unet"
-src_path = "datasets/unet_single_x2"
-dst_path = "results/unet_res_single_x2"
+net = "yolo"
+src_path = "datasets/yolo_single_x2"
+dst_path = "results/yolo_res_single_x2"
 batch_size = 16
 epochs = 50
 learning_rate = 0.001
 limit_resources = true
 
-# [predict]
-# net = "yolo"
-# src_path = "datasets/yolo_single"
-# dst_path = "results/yolo/yolo_res_single/predictions"
-# model_path = "results/yolo/yolo_res_single/train/weights/best.pt"
-
 [predict]
-net = "unet"
-model_path = "results/unet/unet_res_single_x2/models/unet_model.pth"
-src_path = "datasets/unet_single_x2"
-dst_path = "results/unet/unet_res_single_x2/predictions"
+net = "yolo"
+src_path = "datasets/yolo_single_x2"
+dst_path = "results/yolo/yolo_res_single_x2/"
+model_path = "results/yolo/yolo_res_single_x2/train/weights/best.pt"
+
+# [predict]
+# net = "unet"
+# model_path = "results/unet/unet_res_single_x2/models/unet_model.pth"
+# src_path = "datasets/unet_single_x2"
+# dst_path = "results/unet/unet_res_single_x2/predictions"
 
 [evaluate]
 net = "unet"
