--- a/config.toml
+++ b/config.toml
@@ -1,38 +1,57 @@
-step = "train"
+step = "evaluate"
 
-[preprocess]
-net = "yolo"
-src_path = "datasets/MSLesSeg-Dataset"
-dst_path = "datasets/yolo_single_x2"
-resize = "320x320"
-super_scale = 2
-# resize_method = "bilinear"
-split = 0.8
+# Yolo
+# [preprocess]
+# net = "yolo"
+# src_path = "datasets/MSLesSeg-Dataset"
+# dst_path = "datasets/yolo_single_x2"
+# resize = "320x320"
+# super_scale = 2
+# # resize_method = "bilinear"
+# split = 0.8
+
+# [train]
+# net = "yolo"
+# src_path = "datasets/yolo_single_x2"
+# dst_path = "results/yolo_res_single_x2"
+# batch_size = 16
+# epochs = 50
+# learning_rate = 0.001
+# limit_resources = true
+
+# [predict]
+# net = "yolo"
+# src_path = "datasets/yolo_single_x2"
+# dst_path = "results/yolo/yolo_res_single_x2/"
+# model_path = "results/yolo/yolo_res_single_x2/train/weights/best.pt"
 
 [train]
-net = "yolo"
-src_path = "datasets/yolo_single_x2"
-dst_path = "results/yolo_res_single_x2"
+net = "unet"
+src_path = "datasets/unet_max_masks"
+dst_path = "results/unet_max_masks"
 batch_size = 16
 epochs = 50
 learning_rate = 0.001
 limit_resources = true
 
-[predict]
-net = "yolo"
-src_path = "datasets/yolo_single_x2"
-dst_path = "results/yolo/yolo_res_single_x2/"
-model_path = "results/yolo/yolo_res_single_x2/train/weights/best.pt"
+[preprocess]
+net = "unet"
+src_path = "datasets/MSLesSeg-Dataset"
+dst_path = "datasets/unet_max_masks"
+resize = "320x320"
+# super_scale = 2
+# resize_method = "bilinear"
+split = 0.8
 
-# [predict]
-# net = "unet"
-# model_path = "results/unet/unet_res_single_x2/models/unet_model.pth"
-# src_path = "datasets/unet_single_x2"
-# dst_path = "results/unet/unet_res_single_x2/predictions"
+[predict]
+net = "unet"
+model_path = "results/unet/unet_max_masks/models/unet_model.pth"
+src_path = "datasets/unet_max_masks"
+dst_path = "results/unet/unet_max_masks/predictions"
 
 [evaluate]
 net = "unet"
-model_path = "results/unet/unet_res_single/models/unet_model.pth"
-src_path = "datasets/unet_single"
-pred_path = "results/unet/unet_res_single/predictions"
-gt_path = "datasets/unet_single/labels/val"
+model_path = "results/unet/unet_max_masks/models/unet_model.pth"
+src_path = "datasets/unet_max_masks"
+pred_path = "results/unet/unet_max_masks/predictions"
+gt_path = "datasets/unet_max_mask/labels/val"
