--- a/config.json
+++ b/config.json
@@ -7,30 +7,30 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/unet_max_slice_x0",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "top_slices": 1,
                 "super_scale": 1
             },
             "train": {
                 "net": "unet",
                 "src_path": "datasets/unet_max_slice_x0",
-                "dst_path": "results/unet/unet_max_slice_x0_resnet_152",
+                "dst_path": "results/unet/unet_max_slice_x0",
                 "batch_size": 16,
                 "epochs": 50,
                 "learning_rate": 0.001
             },
             "predict": {
                 "net": "unet",
-                "model_path": "results/unet/unet_max_slice_x0_resnet_152/models/unet_max_slice_x0_resnet_152.pth",
+                "model_path": "results/unet/unet_max_slice_x0/models/unet_max_slice_x0.pth",
                 "src_path": "datasets/unet_max_slice_x0",
-                "dst_path": "results/unet/unet_max_slice_x0_resnet_152/predictions"
+                "dst_path": "results/unet/unet_max_slice_x0/predictions"
             },
             "evaluate": {
                 "net": "unet",
                 "model_path": "results/unet/unet_max_slice_x0/models/unet_max_slice_x0.pth",
                 "src_path": "datasets/unet_max_slice_x0",
-                "pred_path": "results/unet/unet_max_masks/predictions",
-                "gt_path": "datasets/unet_max_mask/labels/val"
+                "pred_path": "results/unet/unet_max_slice_x0/predictions",
+                "gt_path": "datasets/unet_max_slice_x0/labels/val"
             }
         },
         {
@@ -40,7 +40,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/unet_max_slice_x2",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "super_scale": 2
             },
             "train": {
@@ -72,7 +72,8 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/yolo_max_slice_x0",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
+                "top_slices": 1,
                 "super_scale": 1
             },
             "train": {
@@ -87,11 +88,11 @@
                 "net": "yolo",
                 "src_path": "datasets/yolo_max_slice_x0",
                 "dst_path": "results/yolo/yolo_max_slice_x0/",
-                "model_path": "results/yolo/yolo_max_slice_x0/train/weights/best.pt"
+                "model_path": "results/yolo/yolo_max_slice_x0/train3/weights/best.pt"
             },
             "evaluate": {
                 "net": "yolo",
-                "model_path": "results/yolo/yolo_max_slice_x0/train/weights/best.pt",
+                "model_path": "results/yolo/yolo_max_slice_x0/train3/weights/best.pt",
                 "src_path": "datasets/yolo_max_slice_x0",
                 "pred_path": "results/yolo/yolo_max_slice_x0/predict/masks",
                 "gt_path": "datasets/yolo_max_slice_x0/labels/val"
@@ -104,7 +105,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/yolo_max_slice_x2",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "super_scale": 2
             },
             "train": {
@@ -129,7 +130,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/unet_top3_slice_x0",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "top_slices": 3,
                 "super_scale": 1
             },
@@ -162,7 +163,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/unet_top3_slice_x2",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "super_scale": 2,
                 "top_slices": 3
             },
@@ -195,7 +196,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/yolo_top3_slice_x0",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "top_slices": 3,
                 "super_scale": 1
             },
@@ -221,7 +222,7 @@
                 "src_path": "datasets/MSLesSeg-Dataset",
                 "dst_path": "datasets/yolo_top3_slice_x2",
                 "resize": "320x320",
-                "split": 0.8,
+                "split": 0.7,
                 "super_scale": 2,
                 "top_slices": 3
             },
