--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ matplotlib==3.10.0
 scikit-learn==1.6.1 
 segmentation-models-pytorch==0.4.0 
 SimpleITK==2.4.1
-toml==0.10.2 
 mypy==1.15.0
 loguru==0.7.3
-types-PyYAML
+pydantic==2.11.5
