--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@ logs/
 results*/
 MSLesSeg-Dataset/
 runs/
-datasets/
+gcs_api.json
+.env
+
+# Add folder but ignore its contents
+!datasets/
+datasets/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
