--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ matplotlib==3.10.0
 scikit-learn==1.6.1 
 segmentation-models-pytorch==0.4.0 
 SimpleITK==2.4.1
-mypy==1.15.0
 loguru==0.7.3
 pydantic==2.11.5
+requests==2.32.3
+python-dotenv==1.1.0
+google-cloud-storage==3.1.0
